codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup_extra_high_warning.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  选 择  gpt-5.1-codex-max 的 推 理 级 别

  1. 低            响 应 更 快 ， 推 理 更 轻 量
  2. 中  (默 认 )    兼 顾 速 度 与 推 理 深 度 ， 适 合 日 常 任 务
  3. 高            为 复 杂 问 题 提 供 更 深 层 的 推 理
› 4. 极 高  (当 前 )  为 复 杂 问 题 提 供 超 深 度 推 理
                  ⚠ 极 高 推 理 级 别 会 很 快 消 耗  Plus 套 餐 限 额 。

  按  enter 确 认 或 按  esc 返 回
