codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__paste_image_error_message_is_localized.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ 粘贴图片失败：剪贴板不可用：Unknown error while interacting with the clipboard
