codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permissions_selection_history_after_mode_switch.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "lines_to_single_string(&cells[0])"
---
• 权限已更新为 完全访问
