codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permissions_selection_history_full_access_to_default.snap
---
source: tui/src/chatwidget/tests.rs
expression: "lines_to_single_string(&cells[0])"
---
• 权限已更新为 Default
