codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  要 执 行 这 个 计 划 吗 ？

› 1. 是 ， 执 行 这 个 计 划           切 换 到  Default 并 开 始 编 码 。
  2. 否 ， 继 续 停 留 在  Plan mode  继 续 使 用 模 型 进 行 规 划 。

  按  enter 确 认 ， 按  esc 返 回
