codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_context_usage.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: popup
---
  实 现 这 个 计 划 ？

› 1. 是 ， 实 现 这 个 计 划         切 换 到 默 认 模 式 并 开 始 编 码 。
  2. 是 ， 清 除 上 下 文 并 实 现     新 线 程 。 上 下 文 ： 89% used。
  3. 否 ， 继 续 保 持  Plan 模 式   继 续 用 当 前 模 型 完 善 计 划 。

  按  enter 确 认 或 按  esc 返 回
